{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 20,
  "lineage": "b4f553b1-afcf-f0ea-832b-3ec6d2bc9c76",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-002d7e5a612aabe02",
            "public_dns": "ec2-3-232-23-93.compute-1.amazonaws.com",
            "public_ip": "3.232.23.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ewp_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-091ea21fe9e61f6b9",
            "owner_id": "588963488334",
            "tags": {
              "Name": "ewp_igw"
            },
            "vpc_id": "vpc-0bac38fd3453184aa"
          },
          "dependencies": [
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ewp_natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002d7e5a612aabe02",
            "id": "nat-05e604f201649a0cc",
            "network_interface_id": "eni-04d5b9a23d65901f9",
            "private_ip": "10.0.1.254",
            "public_ip": "3.232.23.93",
            "subnet_id": "subnet-0c3058bbc2e0e6784"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ewp_internet_gateway",
            "module.networking.aws_subnet.ewp_DMZPublic_subnet",
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ewp_AppLayerPrivate_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01790a4d29c26ae1b",
            "owner_id": "588963488334",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-05e604f201649a0cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ewp_AppLayerPrivate"
            },
            "vpc_id": "vpc-0bac38fd3453184aa"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ewp_internet_gateway",
            "module.networking.aws_nat_gateway.ewp_natgw",
            "module.networking.aws_subnet.ewp_DMZPublic_subnet",
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ewp_DBLayerPrivate_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-051c35188b7d17da8",
            "owner_id": "588963488334",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-05e604f201649a0cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ewp_DBLayerPrivate"
            },
            "vpc_id": "vpc-0bac38fd3453184aa"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ewp_internet_gateway",
            "module.networking.aws_nat_gateway.ewp_natgw",
            "module.networking.aws_subnet.ewp_DMZPublic_subnet",
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ewp_DMZPublic_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dbf04050ca48ba8f",
            "owner_id": "588963488334",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091ea21fe9e61f6b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ewp_DMZPublic"
            },
            "vpc_id": "vpc-0bac38fd3453184aa"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ewp_internet_gateway",
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ewp_AppLayerPrivate_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051d59dedffe86dc9",
            "route_table_id": "rtb-01790a4d29c26ae1b",
            "subnet_id": "subnet-0a377ae6c4aac30d9"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ewp_internet_gateway",
            "module.networking.aws_nat_gateway.ewp_natgw",
            "module.networking.aws_route_table.ewp_AppLayerPrivate_rt",
            "module.networking.aws_subnet.ewp_AppLayerPrivate_subnet",
            "module.networking.aws_subnet.ewp_DMZPublic_subnet",
            "module.networking.aws_vpc.ewp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ffe3ec6a4d99a78",
            "route_table_id": "rtb-01790a4d29c26ae1b",
            "subnet_id": "subnet-0cfec1f4ed92979fa"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ewp_internet_gateway",
            "module.networking.aws_nat_gateway.ewp_natgw",
            "module.networking.aws_route_table.ewp_AppLayerPrivate_rt",
            "module.networking.aws_subnet.ewp_AppLayerPrivate_subnet",
            "module.networking.aws_subnet.ewp_DMZPublic_subnet",
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ewp_DBLayerPrivate_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081cd0d7f15952753",
            "route_table_id": "rtb-051c35188b7d17da8",
            "subnet_id": "subnet-0a12f44ac90776b56"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ewp_internet_gateway",
            "module.networking.aws_nat_gateway.ewp_natgw",
            "module.networking.aws_route_table.ewp_DBLayerPrivate_rt",
            "module.networking.aws_subnet.ewp_DBLayerPrivate_subnet",
            "module.networking.aws_subnet.ewp_DMZPublic_subnet",
            "module.networking.aws_vpc.ewp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec114c607f277f8b",
            "route_table_id": "rtb-051c35188b7d17da8",
            "subnet_id": "subnet-04ace73304f75e655"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.ewp_internet_gateway",
            "module.networking.aws_nat_gateway.ewp_natgw",
            "module.networking.aws_route_table.ewp_DBLayerPrivate_rt",
            "module.networking.aws_subnet.ewp_DBLayerPrivate_subnet",
            "module.networking.aws_subnet.ewp_DMZPublic_subnet",
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ewp_DMZPublic_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c41231f8e82a2df2",
            "route_table_id": "rtb-0dbf04050ca48ba8f",
            "subnet_id": "subnet-0c3058bbc2e0e6784"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ewp_internet_gateway",
            "module.networking.aws_route_table.ewp_DMZPublic_rt",
            "module.networking.aws_subnet.ewp_DMZPublic_subnet",
            "module.networking.aws_vpc.ewp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cad0df6ed6dd1f0b",
            "route_table_id": "rtb-0dbf04050ca48ba8f",
            "subnet_id": "subnet-010f3ad57db96a97d"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ewp_internet_gateway",
            "module.networking.aws_route_table.ewp_DMZPublic_rt",
            "module.networking.aws_subnet.ewp_DMZPublic_subnet",
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ewp_AppLayerPrivate_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588963488334:subnet/subnet-0a377ae6c4aac30d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a377ae6c4aac30d9",
            "map_public_ip_on_launch": false,
            "owner_id": "588963488334",
            "tags": {
              "Name": "ewp_AppLayerPrivate_1"
            },
            "vpc_id": "vpc-0bac38fd3453184aa"
          },
          "dependencies": [
            "module.networking.aws_vpc.ewp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588963488334:subnet/subnet-0cfec1f4ed92979fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0cfec1f4ed92979fa",
            "map_public_ip_on_launch": false,
            "owner_id": "588963488334",
            "tags": {
              "Name": "ewp_AppLayerPrivate_2"
            },
            "vpc_id": "vpc-0bac38fd3453184aa"
          },
          "dependencies": [
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ewp_DBLayerPrivate_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588963488334:subnet/subnet-0a12f44ac90776b56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0a12f44ac90776b56",
            "map_public_ip_on_launch": false,
            "owner_id": "588963488334",
            "tags": {
              "Name": "ewp_DBLayerPrivate_1"
            },
            "vpc_id": "vpc-0bac38fd3453184aa"
          },
          "dependencies": [
            "module.networking.aws_vpc.ewp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588963488334:subnet/subnet-04ace73304f75e655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-04ace73304f75e655",
            "map_public_ip_on_launch": false,
            "owner_id": "588963488334",
            "tags": {
              "Name": "ewp_DBLayerPrivate_2"
            },
            "vpc_id": "vpc-0bac38fd3453184aa"
          },
          "dependencies": [
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ewp_DMZPublic_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588963488334:subnet/subnet-0c3058bbc2e0e6784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c3058bbc2e0e6784",
            "map_public_ip_on_launch": false,
            "owner_id": "588963488334",
            "tags": {
              "Name": "ewp_DMZPublic_1"
            },
            "vpc_id": "vpc-0bac38fd3453184aa"
          },
          "dependencies": [
            "module.networking.aws_vpc.ewp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588963488334:subnet/subnet-010f3ad57db96a97d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-010f3ad57db96a97d",
            "map_public_ip_on_launch": false,
            "owner_id": "588963488334",
            "tags": {
              "Name": "ewp_DMZPublic_2"
            },
            "vpc_id": "vpc-0bac38fd3453184aa"
          },
          "dependencies": [
            "module.networking.aws_vpc.ewp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ewp_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588963488334:vpc/vpc-0bac38fd3453184aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032d7104a23529c71",
            "default_route_table_id": "rtb-03de2b1b27e489061",
            "default_security_group_id": "sg-02267a26c29319447",
            "dhcp_options_id": "dopt-03968737655d43bf8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bac38fd3453184aa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03de2b1b27e489061",
            "owner_id": "588963488334",
            "tags": {
              "Name": "ewp_vpc"
            }
          }
        }
      ]
    }
  ]
}